--- a/KLWines.ShoppingCartService.Domain.Tests/KLWines.ShoppingCartService.Domain.Tests.csproj
+++ b/KLWines.ShoppingCartService.Domain.Tests/KLWines.ShoppingCartService.Domain.Tests.csproj
@@ -78,6 +78,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ShoppingCart.feature</DependentUpon>
     </Compile>
+    <Compile Include="ShoppingCartSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -94,6 +95,16 @@
     <None Include="SpecRunTestProfile_2011_09.xsd">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Interfaces\KLWines.ShoppingCartService.Domain.Interfaces.csproj">
+      <Project>{0593A9E2-B66B-40E6-A796-6C34B50BDE2D}</Project>
+      <Name>KLWines.ShoppingCartService.Domain.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\KLWines.ShoppingCartService.Domain\KLWines.ShoppingCartService.Domain.csproj">
+      <Project>{470AAC1B-ECDF-4662-A315-7DADAD5B590B}</Project>
+      <Name>KLWines.ShoppingCartService.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
