--- a/KLWines.ShoppingCartService.Domain/KLWines.ShoppingCartService.Domain.csproj
+++ b/KLWines.ShoppingCartService.Domain/KLWines.ShoppingCartService.Domain.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Eveneum" Version="0.7.3" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Interfaces\KLWines.ShoppingCartService.Domain.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
