--- a/KLWines.ShoppingCartService.Domain.Tests/packages.config
+++ b/KLWines.ShoppingCartService.Domain.Tests/packages.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Eveneum" version="0.7.3" targetFramework="net472" />
+  <package id="Microsoft.Azure.DocumentDB" version="2.1.3" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="SpecFlow" version="2.4.1" targetFramework="net472" />
   <package id="SpecRun.Runner" version="1.8.5" targetFramework="net472" />
   <package id="SpecRun.SpecFlow" version="1.8.5" targetFramework="net472" />
   <package id="SpecRun.SpecFlow.2-4-0" version="1.8.5" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
+  <package id="System.Net.Http.WinHttpHandler" version="4.5.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net472" />
 </packages>
