chore: latest changes

--- a/KLWines.ShoppingCartService.Domain.Interfaces/KLWines.ShoppingCartService.Domain.Interfaces.csproj
+++ b/KLWines.ShoppingCartService.Domain.Interfaces/KLWines.ShoppingCartService.Domain.Interfaces.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Core\KLWines.ShoppingCartService.Domain.Core.fsproj" />
+  </ItemGroup>
+
 </Project>
