--- a/KLWines.ShoppingCartService.Domain/KLWines.ShoppingCartService.Domain.csproj
+++ b/KLWines.ShoppingCartService.Domain/KLWines.ShoppingCartService.Domain.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Core\KLWines.ShoppingCartService.Domain.Core.fsproj" />
     <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Interfaces\KLWines.ShoppingCartService.Domain.Interfaces.csproj" />
   </ItemGroup>
 
