--- a/KLWines.ShoppingCartService.Domain.Tests/KLWines.ShoppingCartService.Domain.Tests.csproj
+++ b/KLWines.ShoppingCartService.Domain.Tests/KLWines.ShoppingCartService.Domain.Tests.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\ProductTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShoppingCart.feature.cs">
       <AutoGen>True</AutoGen>
