chore: moved to c# value objects, & abstracted eventstore

--- a/KLWines.ShoppingCartService.Domain.Interfaces/KLWines.ShoppingCartService.Domain.Interfaces.csproj
+++ b/KLWines.ShoppingCartService.Domain.Interfaces/KLWines.ShoppingCartService.Domain.Interfaces.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Core\KLWines.ShoppingCartService.Domain.Core.fsproj" />
+    <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Core\KLWines.ShoppingCartService.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
