--- a/KLWines.ShoppingCartService.Orleans.Client/KLWines.ShoppingCartService.Orleans.Client.csproj
+++ b/KLWines.ShoppingCartService.Orleans.Client/KLWines.ShoppingCartService.Orleans.Client.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,11 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Client" Version="2.3.0" />
     <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Orleans.Server" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KLWines.ShoppingCartService.ShoppingCartGrain.Inter\KLWines.ShoppingCartService.ShoppingCartGrain.Inter.csproj" />
   </ItemGroup>
 
 </Project>
