--- a/KLWines.ShoppingCartService.ShoppingCartGrain.Inter/KLWines.ShoppingCartService.ShoppingCartGrain.Inter.csproj
+++ b/KLWines.ShoppingCartService.ShoppingCartGrain.Inter/KLWines.ShoppingCartService.ShoppingCartGrain.Inter.csproj
@@ -10,6 +10,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
