--- a/KLWines.ShoppingCartService.ShoppingCartGrain/packages.config
+++ b/KLWines.ShoppingCartService.ShoppingCartGrain/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Azure.DocumentDB" version="2.1.3" targetFramework="net472" />
   <package id="Microsoft.Orleans.CodeGenerator.MSBuild" version="2.3.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Orleans.Core.Abstractions" version="2.3.0" targetFramework="net472" />
+  <package id="Microsoft.Orleans.OrleansCodeGenerator.Build" version="2.3.0" targetFramework="net472" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
