--- a/KLWines.ShoppingCartService.ShoppingCartGrain/KLWines.ShoppingCartService.ShoppingCartGrain.csproj
+++ b/KLWines.ShoppingCartService.ShoppingCartGrain/KLWines.ShoppingCartService.ShoppingCartGrain.csproj
@@ -84,7 +84,9 @@
   <ItemGroup>
     <Compile Include="BaseEventStoreGrain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProxyRepository.cs" />
     <Compile Include="ShoppingCartGrain.cs" />
+    <Compile Include="ShoppingCartProxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -96,7 +98,7 @@
       <Name>KLWines.ShoppingCartService.Domain.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\KLWines.ShoppingCartService.Domain.Interfaces\KLWines.ShoppingCartService.Domain.Interfaces.csproj">
-      <Project>{0593A9E2-B66B-40E6-A796-6C34B50BDE2D}</Project>
+      <Project>{0593a9e2-b66b-40e6-a796-6c34b50bde2d}</Project>
       <Name>KLWines.ShoppingCartService.Domain.Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\KLWines.ShoppingCartService.Domain\KLWines.ShoppingCartService.Domain.csproj">
@@ -109,7 +111,6 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Microsoft.Orleans.CodeGenerator.MSBuild.2.3.0\build\Microsoft.Orleans.CodeGenerator.MSBuild.targets" Condition="Exists('..\packages\Microsoft.Orleans.CodeGenerator.MSBuild.2.3.0\build\Microsoft.Orleans.CodeGenerator.MSBuild.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
